# directional-neutrino-fog

./: .gitignore  README.md  pyproject.toml  requirements.txt
input_data/neutrino_fluxes/: 13N.txt  15O.txt  17F.txt  7Be1.txt  7Be2.txt  8B.txt  Atm.txt  DSNB.txt  GeoK.txt  GeoTh.txt  GeoU.txt  Nu_flux_uncert  README.md  Reactor.txt  hep.txt  pep.txt  pp.txt
input_data/xpix/: xpix1.txt  xpix16.txt  xpix2.txt  xpix32.txt  xpix4.txt  xpix8.txt
notebooks/: 1_neutrino_recoil_rate.ipynb  2_WIMP_recoil_rate.ipynb  3 Directional Neutrono Recoil Rate.ipynb  4_Directional_WIMP_recoil_rate.ipynb  5_Neutrino_Fog.ipynb
nu_fog_data/: DL(n_ex_1400_ns_1000).txt  ND_m_vals(n_ex_2000_ns_1000).txt  ND_sig_vals(n_ex_2000_ns_1000).txt  m_vals(n_ex_1400_ns_1000).txt  sig_vals(n_ex_1400_ns_1000).txt
src/dirdet/: helpers.py  neutrino_fog.py  neutrino_rates.py  nuclear_phyics.py  plotting.py  velocity_distibutions.py  wimp_rates.py
src/dirdet/config/: conversions.py  physics.py  targets.py
