[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name="dirdet"
version = "0.1.0"
description = "Directional dark matter detector recoil rate calculations and neutrino fog mapping"
requires-python = ">=3.10"
readme = "README.md"

[tool.setuptools.packages.find]
where = ["src"]
